# tamarin-prover

./: .dockerignore  .ghci  .gitignore  .hgignore  .travis-ci.sh  .travis.yml  AUTHORS  CHANGES  CITATION.cff  CONTRIBUTING.md  CURRENT.txt  DESIGN_WEB_INTERACTION  GDH.spthy  GDH_axioms.spthy  GDH_list.spthy  GDH_list_benedikt.spthy  INSTALL.md  Makefile  README  README.md  STR-simp.spthy  STR.ml  STR.spthy  STR_explicit_auth_privatefunc.spthy  STR_list.spthy  STR_ml.spthy  STR_ml_auth2arg.spthy  STR_ml_auth2arg_intruder_can_corrupt-rulenamechange.spthy  STR_ml_auth2arg_intruder_can_corrupt.spthy  STR_nonauth.spthy  Setup.hs  SourceOfUniqueness.oracle  SourceOfUniqueness.spthy  TODO  TODO.md  Wellformedness.hs  asokan-ginzboorg-multi.spthy  autoTest.py  cabal.config  casestudies.txt  (+39 more)
benchmark/: TPM_DAA_JoinCertify_with_fix_BSN.txt  TPM_DAA_JoinCertify_with_fix_BSN.txt.txt  oracle_auth_aliveness_issuer.txt  oracle_correctness_two_certs_same_credentials_same_bsn.txt
book/: index.html
case-studies-regression/: Artificial_analyzed.spthy  DH2-original_analyzed.spthy  JKL_TS1_2004-KI_analyzed.spthy  KAS2-eCK_analyzed.spthy  (+47 more)
lib/accountability/: tamarin-prover-accountability.cabal
lib/accountability/src/: Accountability.hs
lib/accountability/src/Accountability/: Generation.hs
lib/export/: tamarin-prover-export.cabal
lib/export/src/: Export.hs  ProVerifHeader.hs  RuleTranslation.hs  States.hs
lib/rule-translation/: tamarin-prover-rule-translation.cabal
lib/rule-translation/src/: RuleTranslation.hs
lib/sapic/: tamarin-prover-sapic.cabal
lib/sapic/src/: Sapic.hs
lib/sapic/src/Sapic/: Accountability.hs  Annotation.hs  Basetranslation.hs  Bindings.hs  Compression.hs  Exceptions.hs  Facts.hs  LetDestructors.hs  Locks.hs  ProcessUtils.hs  ProgressFunction.hs  ProgressTranslation.hs  ReliableChannelTranslation.hs  Report.hs  Restrictions.hs  SecretChannels.hs  States.hs  Typing.hs  Warnings.hs
lib/term/: .ghci  cabal.config  tamarin-prover-term.cabal
lib/term/src/Term/: Classes.hs  LTerm.hs  Macro.hs  Positions.hs  Substitution.hs  Subsumption.hs  SubtermRule.hs  Term.hs  Unification.hs  UnitTests.hs  VTerm.hs
lib/term/src/Term/Builtin/: Convenience.hs  Rules.hs  Signature.hs
lib/term/src/Term/Maude/: Parser.hs  Process.hs  Signature.hs  Tactics.hs  Types.hs
lib/term/src/Term/Narrowing/: Narrow.hs  Variants.hs
lib/term/src/Term/Narrowing/Variants/: Check.hs  Compute.hs
lib/term/src/Term/Rewriting/: Definitions.hs  Norm.hs  NormAC.hs
lib/term/src/Term/Substitution/: SubstVFree.hs  SubstVFresh.hs
lib/term/src/Term/Term/: Classes.hs  FunctionSymbols.hs  Raw.hs
lib/theory/: .ghci  cabal.config  tamarin-prover-theory.cabal
lib/theory/src/: ClosedTheory.hs  Lemma.hs  Lemmas.hs  N_Theory.hs  OpenTheory.hs  Options.hs  Pretty.hs  Prover.hs  Rule.hs  SpecificProof.hs  Theories.hs  Theory.hs  TheoryObject.hs
lib/theory/src/Items/: AccLemmaItem.hs  CaseTestItem.hs  ClosedTheoryItem.hs  ExportInfo.hs  LemmaItem.hs  OpenTheoryItem.hs  OptionItem.hs  PredicateItem.hs  ProcessItem.hs  RuleItem.hs  TheoryItem.hs
lib/theory/src/Theory/: Model.hs  Module.hs  Proof.hs  ProofSkeleton.hs  Sapic.hs  UnitTests.hs
lib/theory/src/Theory/Constraint/: Solver.hs  System.hs
lib/theory/src/Theory/Constraint/Solver/: AnnotatedGoals.hs  CaseDistinctions.hs  Contradictions.hs  Goals.hs  Heuristics.hs  ProofMethod.hs  Reduction.hs  Simplify.hs  Sources.hs  Types.hs
lib/theory/src/Theory/Constraint/System/: Constraints.hs  Dot.hs  Guarded.hs  JSON.hs
lib/theory/src/Theory/Constraint/System/Graph/: Abbreviation.hs  Graph.hs  GraphRepr.hs  Simplification.hs
lib/theory/src/Theory/Model/: Atom.hs  Fact.hs  Formula.hs  Restriction.hs  Rule.hs  Signature.hs
lib/theory/src/Theory/Sapic/: Annotation.hs  Pattern.hs  PlainProcess.hs  Position.hs  Print.hs  Process.hs  Substitution.hs  Term.hs
lib/theory/src/Theory/Syntactic/: Predicate.hs
lib/theory/src/Theory/Text/: Parser.hs  Pretty.hs
lib/theory/src/Theory/Text/Parser/: Accountability.hs  CaseTest.hs  Exceptions.hs  Fact.hs  Formula.hs  Lemma.hs  Let.hs  Macro.hs  Proof.hs  Restriction.hs  Rule.hs  Sapic.hs  Signature.hs  Tactics.hs  Term.hs  Token.hs  Transfer.hs
lib/theory/src/Theory/Tools/: AbstractInterpretation.hs  EquationStore.hs  InjectiveFactInstances.hs  IntruderRules.hs  LoopBreakers.hs  MessageDerivationChecks.hs  Restrictions.hs  RuleVariants.hs  SubtermStore.hs  Wellformedness.hs
lib/utils/: .cabal-sandbox  .ghci  Setup.hs  tamarin-prover-utils.cabal
lib/utils/src/Control/: Basics.hs
lib/utils/src/Control/Monad/: Bind.hs  Disj.hs  Fresh.hs
lib/utils/src/Control/Monad/Disj/: Class.hs
lib/utils/src/Control/Monad/Fresh/: Class.hs
lib/utils/src/Control/Monad/Trans/: Disj.hs  FastFresh.hs  Fresh.hs  PreciseFresh.hs
lib/utils/src/Data/: Color.hs
lib/utils/src/Data/DAG/: Simple.hs
lib/utils/src/Debug/Trace/: EnvTracer.hs  Ignore.hs
lib/utils/src/Extension/: Prelude.hs
lib/utils/src/Extension/Data/: Bounded.hs  ByteString.hs  Label.hs  Monoid.hs
lib/utils/src/Logic/: Connectives.hs  FOL.hs
lib/utils/src/System/: Timing.hs
lib/utils/src/Text/: Dot.hs  Isar.hs  Unicode.hs
lib/utils/src/Text/PrettyPrint/: Class.hs  Highlight.hs  Html.hs
lib/utils/src/Utils/: Misc.hs
tree-sitter/tree-sitter-spthy/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  regressionParser.sh  setup.py  tree-sitter.json
tree-sitter/tree-sitter-spthy/bindings/c/: tree-sitter-spthy.h  tree-sitter-spthy.pc.in
tree-sitter/tree-sitter-spthy/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter/tree-sitter-spthy/bindings/node/: binding.cc
tree-sitter/tree-sitter-spthy/bindings/python/tests/: test_binding.py
tree-sitter/tree-sitter-spthy/bindings/python/tree_sitter_spthy/: __init__.py  binding.c
tree-sitter/tree-sitter-spthy/bindings/rust/: build.rs  lib.rs
tree-sitter/tree-sitter-spthy/bindings/swift/TreeSitterSpthyTests/: TreeSitterSpthyTests.swift
tree-sitter/tree-sitter-spthy/src/: grammar.json  node-types.json  parser.c  scanner.c
(+2589 files in other folders)
