cabal-version: 3.0
name:          tamarin-prover-export
build-type:    Simple
version:       1.10.0
license:       GPL-3.0-only
license-file:  LICENSE
category:      Theorem Provers
author:        Robert K端nnemann <robert@kunnemann.de>,
               Charlie Jacomme <charlie.jacomme@lsv.fr>
maintainer:    Robert K端nnemann <robert@kunnemann.de>
copyright:     Robert K端nnemann, CISPA-Helmholtz-Centre Saarbr端cken, 2019
               Charlie Jacomme, LSV, 2019

synopsis:      Library for export of processes in the Sapic calculus to the Proverif calculus

description:   This is an internal library of the Tamarin prover for
               security protocol verification
               (<hackage.haskell.org/package/tamarin-prover>).
               .
homepage:      https://tamarin-prover.github.io/


source-repository head
  type:     git
  location: https://github.com/tamarin-prover/tamarin-prover.git

----------------------
-- library stanzas
----------------------

library
  default-language: GHC2021

  ghc-options: -Wall -fwarn-tabs

  ghc-prof-options: -auto-all

  build-depends:
      base
    , bytestring
    , containers
    , text
    , tamarin-prover-sapic
    , tamarin-prover-term
    , tamarin-prover-theory
    , tamarin-prover-utils

  hs-source-dirs: src

  exposed-modules:
    Export

  other-modules:
    RuleTranslation

  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
