name:               tamarin-prover-rule-translation

cabal-version:      >= 1.8
build-type:         Simple
version:            1.7.1
license:            GPL
license-file:       LICENSE
category:           Theorem Provers
author:             Julian Biehl <s8jubieh@stud.uni-saarland.de>
maintainer:         Julian Biehl <s8jubieh@stud.uni-saarland.de>
copyright:          Julian Biehl, Universität des Saarlandes, 2022

synopsis:           Library for the translation of multiset rewrite rules to the ProVerif calculus

description:        This is an internal library of the Tamarin prover for
                    security protocol verification
                    (<hackage.haskell.org/package/tamarin-prover>).
                    .
homepage:           https://tamarin-prover.github.io/


source-repository head
  type:     git
  location: https://github.com/tamarin-prover/tamarin-prover.git

----------------------
-- library stanzas
----------------------

library
    ghc-options:       -Wall -fwarn-tabs

    ghc-prof-options:  -auto-all

    build-depends:
        aeson
      , aeson-pretty
      , base
      , binary
      , bytestring
      , containers
      , deepseq
      , dlist
      , fclabels
      , HStringTemplate
      , mtl
      , parallel
      , parsec
      , process
      , safe
      , text
      , transformers
      , uniplate
      , exceptions
      , raw-strings-qq
      , tamarin-prover-utils
      , tamarin-prover-term
      , tamarin-prover-theory
      , tamarin-prover-sapic

    hs-source-dirs: src

    exposed-modules:
        RuleTranslation
